samples/_failures_safe/1761351541_0b133b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36450f15.c:146: error: expected ‘;’, ‘,’ or ‘)’ at end of input
